# search-and-detection-botnets

./: .gitignore  .gitmodules  404.html  architecture.html  docker-compose.yaml  functional-requirements.html  idef0.html  print.html  processing-data-functional-requirements.html  searchindex.js  toc.html  toc.js
clickhouse-custom-configuration/: Dockerfile
current/: architecture.html  functional-requirements.html  idef0.html  index.html
data-analysis-agent/: pyproject.toml
data-analysis-agent/notebooks/: data-analysis.ipynb
data-collector/: pom.xml
envs/: clickhouse.env.example  kafka.env.example
future/: architecture.html  index.html  processing-data-functional-requirements.html
monitoring-agent/: .env.example  CMakeLists.txt  Makefile  config.example.yaml  constants.py  go.mod  go.sum  main.py  producer.py  pyproject.toml  send_info_about_system.py  utils.py
monitoring-agent/bpf/: traffic.c  vmlinux.h
monitoring-agent/cmd/agent/: main.go
monitoring-agent/include/monitoring-agent/core/: ProcessesMonitor.hpp  processes_monitor.hpp
monitoring-agent/include/monitoring-agent/domain/: FileDescriptorInfo.hpp  NetConnectionInfo.hpp  ProcessInfo.hpp  file_descriptor_info.hpp  net_connection_info.hpp  process_info.hpp
monitoring-agent/internal/bpfprog/: cgroup.go  clock.go  collector.go  gen.go  tc.go  traffic_bpfeb.go  traffic_bpfel.go  xdp.go
monitoring-agent/internal/config/: config.go
monitoring-agent/internal/hostinfo/: hostinfo.go
monitoring-agent/internal/sender/: sender.go
monitoring-agent/src/: constants.py  main.cpp  main.py  producer.py  send_info_about_system.py  utils.py
monitoring-agent/src/core/: processes_monitor.cpp
monitoring-agent/src/monitoring-agent/core/: ProcessesMonitor.cpp  processes_monitor.cpp
project-description/: book.toml
proto/: traffic.proto
traffic-analyzer/: Dockerfile  config.example.yaml  config.py  consumer.py  features.py  main.py  pipeline.py  requirements.txt  run.py  (+3 more)
(+79 files in other folders)
