[tool.poetry]
name = "monitoring-agent"
version = "0.1.0"
description = ""
authors = ["517ANT39 <toni.tashchilin@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^7.2.2"
python-dotenv = "^1.2.1"
python3-pika = "^0.9.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
